--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,7 @@
 
     <string name="fixed_internal_ip">192.168.0.201</string>
     <string name="fixed_socket_port">43000</string>
-    <string name="mqtt_connect_url">tcp://192.168.0.201:1883</string>
+    <string name="controller_name">controller01</string>
+<!--    <string name="mqtt_connect_url">tcp://192.168.0.201:1883</string>-->
+    <string name="mqtt_connect_url">tcp://192.168.219.126:1883</string>
 </resources>
