--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,6 +100,20 @@
     <string name="fixed_internal_ip">192.168.0.201</string>
     <string name="fixed_socket_port">43000</string>
     <string name="controller_name">controller01</string>
-<!--    <string name="mqtt_connect_url">tcp://192.168.0.201:1883</string>-->
-    <string name="mqtt_connect_url">tcp://192.168.219.126:1883</string>
+    <string name="mqtt_connect_url">tcp://192.168.0.201:1883</string>
+<!--    <string name="mqtt_connect_url">tcp://192.168.219.126:1883</string>-->
+    <string name="vim_move_step">1F</string><!-- 1mm 실제 0.1m -->
+    <string name="camera_move_step">.5F</string><!-- 각도 -->
+    <string name="interval_millis">20</string><!-- 변경 반영 텀 0.02초 -->
+
+    <string name="vim_x_min">-750</string>
+    <string name="vim_x_max">750</string>
+    <string name="vim_y_min">-750</string>
+    <string name="vim_y_max">750</string>
+    <string name="vim_z_min">0</string>
+    <string name="vim_z_max">500</string>
+    <string name="camera_pan_min">-60</string>
+    <string name="camera_pan_max">60</string>
+    <string name="camera_tilt_min">-60</string>
+    <string name="camera_tilt_max">60</string>
 </resources>
