--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,8 @@
     <string name="mqtt_password">ing#8119</string>
     <string name="vim_move_step">1F</string><!-- 1mm 실제 0.1m -->
     <string name="camera_move_step">1F</string><!-- 각도 -->
-    <string name="interval_millis">20</string><!-- 변경 반영 텀 0.02초 -->
+    <string name="interval_millis_v">20</string><!-- 빔 변경 반영 텀 0.05초 -->
+    <string name="interval_millis_c">20</string><!-- 서보 변경 반영 텀 0.1초 -->
 
     <string name="vim_x_min">-750</string>
     <string name="vim_x_max">750</string>
